fix url creation from files